--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
     <title>FigmaLand-Landing Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <img src="assets/logo.png" alt="figma-logo" />
+      <div class="container-nav">
+        <a href="#">Home</a>
+        <a href="#">Product</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </div>
+      <div class="container-button-1">
+        <button>Login</button>
+      </div>
+    </header>
+  </body>
 </html>
