--- a/index.html
+++ b/index.html
@@ -19,5 +19,21 @@
         <button>Login</button>
       </div>
     </header>
+    <section class="hero">
+      <div class="container-intro">
+        <h1>Lightning fast prototyping</h1>
+        <p>
+          Most calendars are designed for teams. Slate is designed for
+          freelancers.
+        </p>
+      </div>
+      <div class="container-button-2">
+        <button>Get Started</button>
+        <button>Try For Free</button>
+      </div>
+      <div class="container-image">
+        <img src="assets/screen.png" alt="screen" />
+      </div>
+    </section>
   </body>
 </html>
