add second section

--- a/index.html
+++ b/index.html
@@ -35,5 +35,20 @@
         <img src="assets/screen.png" alt="screen" />
       </div>
     </section>
+    <section class="hero-2">
+      <div class="container-section">
+        <h2>Just type</h2>
+        <h1>Fastest way to navigate</h1>
+        <p>
+          Most calendars are designed for teams.
+          <br />
+          Slate is designed for freelancers
+        </p>
+        <div class="container-button-2">
+          <button>Download</button>
+          <button>See Walktrough</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
