add features section

--- a/index.html
+++ b/index.html
@@ -50,5 +50,36 @@
         </div>
       </div>
     </section>
+    <section class="feature">
+      <div class="container-feature">
+        <div class="container-text">
+          <h1>OpenType features</h1>
+          <p>
+            Most calendars are designed for teams. <br />
+            Slate is designed for freelancers who <br />
+            want a simple way to plan their schedule.
+          </p>
+          <a href="">LEARN MORE</a>
+        </div>
+        <div class="container-image-1">
+          <img src="./assets/feature-1.png" alt="feature-image-1" />
+        </div>
+      </div>
+    </section>
+    <section class="feature">
+      <div class="container-feature">
+        <div class="container-image-1">
+          <img src="./assets/feature-2.png" alt="feature-image-2" />
+        </div>
+        <div class="container-text">
+          <h1>Variable fonts</h1>
+          <p>
+            Most calendars are designed for teams. <br />
+            Slate is designed for freelancers.
+          </p>
+          <a href="">LEARN MORE</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
